--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -45,8 +45,9 @@ jobs:
             Hi @${{ github.event.pull_request.user.login }}, thanks for your contribution. Please prefix the commit message(s) with the [DBZ-xxx JIRA issue key](https://github.com/debezium/debezium/blob/main/CONTRIBUTE.md#making-changes).
       - name: Check failure
         if: ${{ steps.check.outputs.PREFIX == 'false' }}
-        uses: actions/github-script@v3
+        uses: actions/github-script@v5
+        continue-on-error: false
         with:
           script: |
-            core.setFailed('Commits with no DBZ-xxx prefix')
+            throw new Error('Commit has no DBZ-xxx prefiix')
             
