--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -49,5 +49,5 @@ jobs:
         continue-on-error: false
         with:
           script: |
-            throw new Error('Commit has no DBZ-xxx prefiix')
+            throw new Error('Commit has no DBZ-xxxx prefiix')
             
